test/visionui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoheaders1
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - vision.testing.freestyleiot.com
    secretName: vision-tls

  rules:
  - host: vision.testing.freestyleiot.com
    http:
      paths:
      - path: /
        backend:
          serviceName: visionui
          servicePort: 80
